--- a/heading.html
+++ b/heading.html
@@ -133,6 +133,8 @@
                                     </div>
                                     <div class="news-item__text">
                                         <span class="news-title">Марафон “Мандариновое настроение” завершился</span>
+                                        Надо как-то идти, надо, чтобы было понимание, куда ты идешь, осознание своих целей и задач.
+                                        Надо как-то идти, надо, чтобы было понимание, куда ты идешь, осознание своих целей и задач.
                                         Глеб Самойлов бвл хедлайнером финального концерта конкурса “Свободный микрофон”.
                                     </div>
                                 </a>
@@ -142,6 +144,7 @@
                                     </div>
                                     <div class="news-item__text">
                                         <span class="news-title">Марафон “Мандариновое настроение” завершился</span>
+                                        Глеб Самойлов бвл хедлайнером финального концерта конкурса “Свободный микрофон”.
                                         Глеб Самойлов бвл хедлайнером финального концерта конкурса “Свободный микрофон”.
                                     </div>
                                 </a>
@@ -154,7 +157,7 @@
                                         Прежде всего, реализация намеченных плановых заданий прекрасно подходит для реализации форм воздействия.
                                     </div>
                                 </a>
-                                <a href="" class="news-item">
+                                <!-- <a href="" class="news-item">
                                     <div class="news-item__img">
                                         <img src="img/heading/6.png" alt="">
                                     </div>
@@ -162,7 +165,7 @@
                                         <span class="news-title">Укрепление и развитие внутренней структуры</span>
                                         Прежде всего, реализация намеченных плановых заданий прекрасно подходит для реализации форм воздействия.
                                     </div>
-                                </a>
+                                </a> -->
                                 <a href="" class="news-item">
                                     <div class="news-item__img">
                                         <img src="img/heading/7.png" alt="">
