--- a/home.html
+++ b/home.html
@@ -70,62 +70,75 @@
     </header>
     <main>
         <section class="welcome-swiper">
-            <div class="container">
-                <div class="swiper-container">
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide" data-hash="slide1">
-                            <div class="slide__wrap">
-                                <div class="slide-img">
-                                    <img src="img/svg/swiper-img.svg" alt="">
-                                </div>
-                                <div class="slide-text">
-                                    <span class="slide-title">Клубы добровольцев</span>
-                                    <p>Объединяем тех, кто готов помогать с теми, кто нуждается в поддержке</p>
-                                    <div class="slider-btn">
-                                        <a href="" class="">ПОДРОБНЕЕ</a>
-                                    </div>
-                                </div>
+            <div class="swiper-container">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide swiper-slide-main swiper-slide1" data-hash="slide1">
+                        <div class="slide__wrap">
+                            <div class="slide-img">
+                                <img src="img/svg/swiper-img.svg" alt="">
                             </div>
-                        </div>
-                        <div class="swiper-slide" data-hash="slide2">
-                            <div class="slide__wrap">
-                                <div class="slide-img">
-                                    <img src="img/svg/swiper-img.svg" alt="">
-                                </div>
-                                <div class="slide-text">
-                                    <span class="slide-title">Клубы добровольцев</span>
-                                    <p>Объединяем тех, кто готов помогать с теми, кто нуждается в поддержке</p>
-                                    <div class="slider-btn">
-                                        <a href="" class="">ПОДРОБНЕЕ</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide" data-hash="slide3">
-                            <div class="slide__wrap">
-                                <div class="slide-img">
-                                    <img src="img/svg/swiper-img.svg" alt="">
-                                </div>
-                                <div class="slide-text">
-                                    <span class="slide-title">Клубы добровольцев</span>
-                                    <p>Объединяем тех, кто готов помогать с теми, кто нуждается в поддержке</p>
-                                    <div class="slider-btn">
-                                        <a href="" class="">ПОДРОБНЕЕ</a>
-                                    </div>
+                            <div class="slide-text">
+                                <span class="slide-title">Клубы добровольцев</span>
+                                <p>Объединяем тех, кто готов помогать с теми, кто нуждается в поддержке</p>
+                                <div class="slider-btn">
+                                    <a href="" class="">ПОДРОБНЕЕ</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- Add Arrows -->
-                    <div class="swiper-button-next">
-                        <img src="img/svg/swiper_btn.svg" alt="">
+                    <div class="swiper-slide swiper-slide-main swiper-slide2" data-hash="slide2">
+                        <div class="slide__wrap">
+                            <div class="slide-img">
+                                <img src="img/svg/swiper-img.svg" alt="">
+                            </div>
+                            <div class="slide-text">
+                                <span class="slide-title">Клубы добровольцев</span>
+                                <p>Объединяем тех, кто готов помогать с теми, кто нуждается в поддержке</p>
+                                <div class="slider-btn">
+                                    <a href="" class="">ПОДРОБНЕЕ</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="swiper-button-prev">
-                        <img src="img/svg/swiper_btn.svg" alt="">
+                    <div class="swiper-slide swiper-slide-main swiper-slide3" data-hash="slide3">
+                        <div class="slide__wrap">
+                            <div class="slide-img">
+                                <img src="img/svg/swiper-img.svg" alt="">
+                            </div>
+                            <div class="slide-text">
+                                <span class="slide-title">Клубы добровольцев</span>
+                                <p>Объединяем тех, кто готов помогать с теми, кто нуждается в поддержке</p>
+                                <div class="slider-btn">
+                                    <a href="" class="">ПОДРОБНЕЕ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide swiper-slide-main swiper-slide4" data-hash="slide4">
+                        <div class="slide__wrap">
+                            <div class="slide-img">
+                                <img src="img/svg/swiper-img.svg" alt="">
+                            </div>
+                            <div class="slide-text">
+                                <span class="slide-title">Клубы добровольцев</span>
+                                <p>Объединяем тех, кто готов помогать с теми, кто нуждается в поддержке</p>
+                                <div class="slider-btn">
+                                    <a href="" class="">ПОДРОБНЕЕ</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <!-- Add Arrows -->
+                <div class="swiper-button-next">
+                    <img src="img/svg/swiper_btn.svg" alt="">
+                </div>
+                <div class="swiper-button-prev">
+                    <img src="img/svg/swiper_btn.svg" alt="">
+                </div>
             </div>
+            
         </section>
         <section class="news">
             <div class="container">
